k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: po-lin-result
  namespace: demo-po-lin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: po-lin-result
  template:
    metadata:
      labels:
        app: po-lin-result
    spec:
      containers:
      - name: result-container
        image: barberry/result:latest
        ports:
        - containerPort: 80
          protocol: TCP
