k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: po-lin-worker
  namespace: demo-po-lin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: po-lin-worker
  template:
    metadata:
      labels:
        app: po-lin-worker
    spec:
      containers:
      - name: worker-container
        image: barberry/worker:latest
