k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: basic3tier-api
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
