k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: demo-po-lin
spec:
  ingressClassName: "nginx"
  rules:
    - host: vote.po-lin.diogohack.shop
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: po-lin-vote-service
                port:
                  number: 80
    - host: result.po-lin.diogohack.shop
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: po-lin-result-service
                port:
                  number: 80
